# as2_core

./: .gitignore  CMakeLists.txt  README.md  doxygen.dox  doxygen_docs.tar  frames.gv  neovim.json  package.xml
include/: aerial_platform.hpp  node.hpp
include/aerostack2_core/: aerial_platform.hpp  naming.hpp  node.hpp  platform_state_machine.hpp  sensor.hpp
include/as2_core/: aerial_platform.hpp  as2_basic_behaviour.hpp  core_functions.hpp  naming.hpp  node.hpp  platform_state_machine.hpp  rate.hpp  sensor.hpp  synchronous_service_client.hpp  tf_utils.hpp  utils.hpp
include/as2_core/control_mode_utils/: control_mode_utils.hpp
include/as2_core/frame_utils/: frame_utils.hpp
include/as2_core/names/: actions.hpp  services.hpp  topics.hpp
include/as2_core/yaml_utils/: yaml_utils.hpp
src/: aerial_platform.cpp  aerostack2_test_main.cpp  core_functions.cpp  node.cpp  platform_state_machine.cpp  rate.cpp  sensor.cpp  tf_utils.cpp  utils.cpp
src/control_mode_utils/: control_mode_utils.cpp
src/frame_utils/: frame_utils.cpp
src/yaml_utils/: yaml_utils.cpp
tests/: CMakeLists.txt  platform_state_machine_test.cpp  yaml_reading_text.cpp
